2010-12-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tk.h:       [Patch 3124554]: Move WishPanic from Tk to Tcl
	* win/winMain.c:      Remove special MessageBox'es here, since every
	panic-related thing is now handled correctly by Tcl.

2010-12-15  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/Makefile.in:	Installer Improvements.
	* unix/install-sh:	Similar to Tcl [Patch 3101127].

2010-12-15  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkMain.c:  [Patch #3124683]: platform specific stuff in (tcl|tk)Main.c

2010-12-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4:      [Bug 3135271] Link error due to hidden
	* unix/configure:    symbols (CentOS 4.2)  (autoconf-2.59)
    * generic/tkMain.c:   Change "Application initialization failed" to
    * tests/main.test:    "application-specific initialization failed",
    for consistency with Tcl.
	* win/tkWin32Dll.c:   See also: [Patch 1910041] and [Patch 3059922]. SEH emulation
	on Win64 was not correct here: it sometimes results in a crash. Contrary to the
	other places, the code here is not meant to protect from OS bugs, but to protect
	Finalizing Tk when the application went in an invalid state.

2010-12-12  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/tcl.m4: Better building on OpenBSD.
	* unix/configure: (autoconf-2.59)

2010-12-10  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4:               Fix manifest-generation for 64-bit gcc (mingw-w64)
	* win/configure:            (autoconf-2.59)

2010-12-06  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkSelect.c:     [Bug 3129527]: Fix buffer overflow w/ GCC 4.5 and
	* generic/tkTextDisp.c    -D_FORTIFY_SOURCE=2
	* unix/tkUnixWm.c
	* win/tkWinWm.c

2010-12-05  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4:      [Patch #3116490] cross-compile support for unix
	* unix/configure    (autoconf-2.59)

2010-12-03  Jan Nijtmans  <nijtmans@users.sf.net>
